--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@
   color: black;
   background-color: antiquewhite;
 }
+
+.gitHub {
+  font-size: 1em;
+}
 @keyframes aura {
   0% {
     border: 4em solid rgba(255, 255, 255);
